--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,8 @@ body {
     padding: 0;
     background-color: #f9f9f9;
     color: #333;
-    overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow-x: none; /* Prevent horizontal overflow */
+    overflow-x: hidden;
     line-height: 1.6;
 }
 
