--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,11 +11,11 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
+    overflow-x: hidden;
+    height: 100%;
     font-size: 100%;
-}
-
-body {
+    position: relative;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
@@ -23,6 +23,7 @@ body {
     color: #333;
     line-height: 1.6;
     overflow-x: hidden;
+    scroll-snap-stop: always;
 }
 
 img {
