--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@ a {
     align-items: center;
     justify-content: space-between;
     position: relative;
+    overflow-x: hidden;
 }
 
 /* Container within header */
@@ -111,7 +112,7 @@ a {
 
 /* Navigation Styling */
 .header .nav {
-    display: none; /* Hide by default */
+    display: none;
     flex-direction: column;
     width: 100%;
     background-color: #00ACA8;
